Fixed login box. Fixed header on mobile devices

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -299,10 +299,10 @@ p {
 /* header */
 
 .navbar {
-  @media only screen and (max-device-width: 768px) {
-    position: absolute !important;
-    min-width: 1050px !important;
-  }
+  //@media only screen and (max-device-width: 768px) {
+  //  position: absolute !important;
+  //  min-width: 1050px !important;
+  //}
 }
 
 .header-v-center {
